SQL metadaat: fix an "ID column not found" error on PostgreSQL, more compact identifiers, and replace CRS WKT by EPSG codes.
git-svn-id: https://svn.apache.org/repos/asf/sis/branches/JDK8@1832743 13f79535-47bb-0310-9956-ffa450edef68